objects/WT_Power_BI_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>WT_Client_ID__c</fullName>
        <label>Client ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Tenant_ID__c</fullName>
        <label>Tenant ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Power BI Settings</label>
    <pluralLabel>Power BI Settings</pluralLabel>
</CustomObject>